@@ -5,6 +5,7 @@ Version 1.5.0 (?? March 2011):
 
    Fixed bugs:
      * sellonlatbox: does not work as expected when selecting all longitutes
+     * detrend: integer overflow; wrong result for nts > 46340
 
 Version 1.4.7 (06 January 2011):
 
